# topic_model_reprocessed_newspapers

./: .gitignore  README.md  environment.yml  read_data.py  requirements.txt  requirements_for_bert.txt  requirements_for_gensim.txt  requirements_with_gensim.txt  setup.cfg  setup.py
resources/: consolidations.csv  lemmata.csv  pythonic_resources.py  sentiment_lexicon.csv  stopwords.csv
slurm/: bertopic.slurm  bertopic_raw.slurm  gensim.slurm  leet.slurm  leet_raw.slurm  leet_vis.slurm  prep_and_sent_a.slurm  prep_only.slurm  prep_test.slurm  sent_a.slurm  sent_vis.slurm  speedtest.slurm  tomoto.slurm
src/tests/: test_topic_model.py
src/topic-rnews/: LDA.py  leet_topic.py  main.py  preprocessing.py  preprocessing_for_sentiment_analysis.py  read_data.py  sentiment_analysis_by_searchwords.py  sentiment_analysis_per_article.py  topic_model.py  topic_model_w_leet_topic.py
src/topic_rnews/: bertopic_only.py  export_most_common.py  export_topic_subdatasets.py  further_processing_main.py  leet_only.py  main.py  preparation_and_sentiment_analysis.py  preprocessing.py  read_data.py  reintegrate_text.py  run_speedtest.py  sent_a_only.py  sentiment_analysis.py  sentiment_analysis_by_searchwords.py  sentiment_analysis_fast.py  sentiment_analysis_per_article.py  sentiment_analysis_src.py  simple_csv_maker.py  sourcecode.py  topic_model.py  topic_model_bert.py  topic_model_bertopic.py  topic_model_bertopic_from_raw.py  topic_model_gensim.py  topic_model_leet.py  topic_model_leet_from_raw.py  topic_model_src.py  topic_model_tomoto.py  (+3 more)
test/: test_df.csv  test_topic_model.py
