##########################
# Setup.py Configuration #
##########################
[metadata]
name = topic-rnews
version = 0.0.1-dev
description = Article based topic modelling on re-processed historical newspapers
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/KaraKuebart/topic_model_reprocessed_newspapers
download_url = https://github.com/KaraKuebart/topic_model_reprocessed_newspapers/releases
project_urls =
    Bug Tracker = https://github.com/KaraKuebart/topic_model_reprocessed_newspapers/issues
    Source Code = https://github.com/KaraKuebart/topic_model_reprocessed_newspapers


keywords =
    Digital History
    Topic Modelling

# Author information
author = Kara Kuebart, Christian Schultze, Felix Selgert


# License information
license = EUROPEAN UNION PUBLIC LICENCE
license_files = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
install_requires =
    numpy
    tqdm
    pandas

python_requires = >=3.10

packages = find:
package_dir =
    = src

[options.packages.find]
where = src